feat: Adiciona o MapStruct.